src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__program_with_real_cast_assignment.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type { float, i16 }

@prg_instance = global %prg zeroinitializer

define void @prg(%prg* %0) {
entry:
  %y = getelementptr inbounds %prg, %prg* %0, i32 0, i32 0
  %x = getelementptr inbounds %prg, %prg* %0, i32 0, i32 1
  %load_x = load i16, i16* %x, align [filtered]
  %1 = sitofp i16 %load_x to float
  store float %1, float* %y, align [filtered]
  ret void
}
