src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__program_with_time_of_day_assignment.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type { i32 }

@prg_instance = global %prg zeroinitializer

define void @prg(ptr %0) {
entry:
  %y = getelementptr inbounds nuw %prg, ptr %0, i32 0, i32 0
  store i32 0, ptr %y, align [filtered]
  store i32 3600000, ptr %y, align [filtered]
  store i32 3600001, ptr %y, align [filtered]
  store i32 3661000, ptr %y, align [filtered]
  store i32 72900000, ptr %y, align [filtered]
  store i32 72900000, ptr %y, align [filtered]
  store i32 40260000, ptr %y, align [filtered]
  store i32 40260000, ptr %y, align [filtered]
  ret void
}
