src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__program_with_var_inout_called_in_program.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%foo = type { i32* }
%prg = type { i32 }

@foo_instance = global %foo zeroinitializer
@prg_instance = global %prg zeroinitializer

define void @foo(%foo* %0) {
entry:
  %inout = getelementptr inbounds %foo, %foo* %0, i32 0, i32 0
  %deref = load i32*, i32** %inout, align [filtered]
  %deref1 = load i32*, i32** %inout, align [filtered]
  %load_inout = load i32, i32* %deref1, align [filtered]
  %tmpVar = add i32 %load_inout, 1
  store i32 %tmpVar, i32* %deref, align [filtered]
  ret void
}

define void @prg(%prg* %0) {
entry:
  %baz = getelementptr inbounds %prg, %prg* %0, i32 0, i32 0
  store i32 7, i32* %baz, align [filtered]
  store i32* %baz, i32** getelementptr inbounds (%foo, %foo* @foo_instance, i32 0, i32 0), align [filtered]
  call void @foo(%foo* @foo_instance)
  ret void
}
