src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__program_with_var_out_called_mixed_in_program.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%foo = type { i32, i8 }
%prg = type { i8 }

@foo_instance = global %foo zeroinitializer
@prg_instance = global %prg zeroinitializer

define void @foo(%foo* %0) {
entry:
  %bar = getelementptr inbounds %foo, %foo* %0, i32 0, i32 0
  %buz = getelementptr inbounds %foo, %foo* %0, i32 0, i32 1
  ret void
}

define void @prg(%prg* %0) {
entry:
  %baz = getelementptr inbounds %prg, %prg* %0, i32 0, i32 0
  store i32 2, i32* getelementptr inbounds (%foo, %foo* @foo_instance, i32 0, i32 0), align [filtered]
  call void @foo(%foo* @foo_instance)
  %1 = load i8, i8* getelementptr inbounds (%foo, %foo* @foo_instance, i32 0, i32 1), align [filtered]
  store i8 %1, i8* %baz, align [filtered]
  ret void
}
