src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__program_with_variable_and_arithmatic_assignment_generates_void_function_and_struct_and_body.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type { i32, i32 }

@prg_instance = global %prg zeroinitializer

define void @prg(%prg* %0) {
entry:
  %x = getelementptr inbounds %prg, %prg* %0, i32 0, i32 0
  %y = getelementptr inbounds %prg, %prg* %0, i32 0, i32 1
  %load_x = load i32, i32* %x, align [filtered]
  %tmpVar = add i32 %load_x, 1
  store i32 %tmpVar, i32* %y, align [filtered]
  %load_x1 = load i32, i32* %x, align [filtered]
  %tmpVar2 = sub i32 %load_x1, 2
  store i32 %tmpVar2, i32* %y, align [filtered]
  %load_x3 = load i32, i32* %x, align [filtered]
  %tmpVar4 = mul i32 %load_x3, 3
  store i32 %tmpVar4, i32* %y, align [filtered]
  %load_x5 = load i32, i32* %x, align [filtered]
  %tmpVar6 = sdiv i32 %load_x5, 4
  store i32 %tmpVar6, i32* %y, align [filtered]
  %load_x7 = load i32, i32* %x, align [filtered]
  %tmpVar8 = srem i32 %load_x7, 5
  store i32 %tmpVar8, i32* %y, align [filtered]
  ret void
}
