src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__program_with_variable_and_comparison_assignment_generates_void_function_and_struct_and_body.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type { i32, i8 }

@prg_instance = global %prg zeroinitializer

define void @prg(%prg* %0) {
entry:
  %x = getelementptr inbounds %prg, %prg* %0, i32 0, i32 0
  %y = getelementptr inbounds %prg, %prg* %0, i32 0, i32 1
  %load_x = load i32, i32* %x, align [filtered]
  %tmpVar = icmp eq i32 %load_x, 1
  %1 = zext i1 %tmpVar to i8
  store i8 %1, i8* %y, align [filtered]
  %load_x1 = load i32, i32* %x, align [filtered]
  %tmpVar2 = icmp sgt i32 %load_x1, 2
  %2 = zext i1 %tmpVar2 to i8
  store i8 %2, i8* %y, align [filtered]
  %load_x3 = load i32, i32* %x, align [filtered]
  %tmpVar4 = icmp slt i32 %load_x3, 3
  %3 = zext i1 %tmpVar4 to i8
  store i8 %3, i8* %y, align [filtered]
  %load_x5 = load i32, i32* %x, align [filtered]
  %tmpVar6 = icmp ne i32 %load_x5, 4
  %4 = zext i1 %tmpVar6 to i8
  store i8 %4, i8* %y, align [filtered]
  %load_x7 = load i32, i32* %x, align [filtered]
  %tmpVar8 = icmp sge i32 %load_x7, 5
  %5 = zext i1 %tmpVar8 to i8
  store i8 %5, i8* %y, align [filtered]
  %load_x9 = load i32, i32* %x, align [filtered]
  %tmpVar10 = icmp sle i32 %load_x9, 6
  %6 = zext i1 %tmpVar10 to i8
  store i8 %6, i8* %y, align [filtered]
  ret void
}
